--- a/assets/Css/Accommodations.css
+++ b/assets/Css/Accommodations.css
@@ -668,7 +668,16 @@
             color: white;
             font-size: 16px;
         }
-        
+        .btn a{
+            text-decoration: none;
+            color: white;
+            text-decoration: none;
+            border-radius: 30px;
+            font-weight: 600;
+            transition: all 0.3s ease;
+            border: none;
+            cursor: pointer;
+        }
         .newsletter-form button {
             padding: 15px 25px;
             background: linear-gradient(45deg, #8B4513, #D4AF37);
